이미지 생성 api 변경